--- a/01-escrow/Cargo.toml
+++ b/01-escrow/Cargo.toml
@@ -6,7 +6,7 @@ license = "WTFPL"
 publish = false
 
 [dependencies]
-solana-program = "=1.8.6"
+solana-program = "1.6.22"
 thiserror = "1.0.24"
 spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
 arrayref = "0.3.6"
